@@ -1,9 +1,10 @@
 Version 10.1 - Carrier Command edition. 28 October 2021
 
 Added setting to change ULA Data bus value
-Improve portability of shell scripts. Thanks to AndersonTorres
+Improved portability of shell scripts. Thanks to AndersonTorres
 Fixed segfault pressing F5 after pressing pause key
 Fixed preserve breakpoints state when doing smartload
+Fixed refreshing Visual Real Tape window when Top Speed condition
 
 Some other minor bugfixes and improvements
 
